// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createLoader jsLoader will generate dts file (.js) 1`] = `
Object {
  "contents": "declare const _default: 42;
export default _default;
",
  "extension": ".d.ts",
  "path": "test.js",
}
`;

exports[`createLoader jsLoader will generate dts file (.ts) 1`] = `
Object {
  "contents": "declare const _default: 42;
export default _default;
",
  "extension": ".d.ts",
  "path": "test.ts",
}
`;

exports[`createLoader vueLoader will generate dts file 1`] = `
Object {
  "contents": "declare const _default: 42;
export default _default;
",
  "extension": ".d.ts",
  "path": "test.vue.ts",
}
`;
